<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Bucket List</string>
    <string name="txtTitle">The Bucket List</string>
    <string name="action_logout">Log Out</string>
    <string name="action_profile">Profile</string>
    <string name="etUserNameHint">UserName</string>
    <string name="etPasswordHint">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="copyright">Copyright © 2014 by Team Jasmine</string>
    <string name="tvDontHaveAccount">Don\'t Have An Account Yet?</string>
    <string name="dialogLogin">Logging in …</string>
    <string name="dialogRegister">Registering …</string>
    <string name="emptyUserNameAndPassword">The UserName or Password fields cannot be empty</string>
    <string name="registerSuccess">Register Success, please Login</string>
    <string name="goalsPageTitle">Goals</string>
    <string name="braggersPageTitle">Braggers</string>
    <string name="ideasPageTitle">Ideas Land</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="txtGoalTitleHint">Goal Title</string>
    <string name="txtSetYourNewGoal">Set Your New Goal</string>
    <string name="txtGoalDescriptionHint">Description</string>
    <string name="txtTitleNewGoal">New Goal</string>
    <string name="btnNewGoal">Add Goal</string>
    <string name="btnTakePhoto">Take Photo</string>
    <string name="ivProgress">Progress</string>
    <string name="txtIdeaTitle">Idea Title</string>
    <string name="txtIdeaAuthor">By Author</string>
    <string name="txtCreatedAt">Created At</string>
    <string name="txtTitleEditProfile">Edit Profile</string>
    <string name="etDisplayNameHint">DisplayName</string>
    <string name="etEMailHint">Email</string>
    <string name="btnSaveProfile">Save Changes</string>
    <string name="txtGreeting">Howdy User</string>
    <string name="txtProgressInfo">You Have Completed</string>
    <string name="txtTitleProfile">Profile Information</string>
    <string name="title_activity_goal_detail">Goal Detail</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="set_goal">Set As New Goal</string>
    <string name="success_set_idea_as_goal">Idea \'%s\' is successfully added to your goals</string>
    <string name="goal_title_warning">The Goal Title can\'t be empty</string>
    <string name="idea_detail">Idea Detail</string>
    <string name="set_as_completed">Set As Completed</string>
    <string name="brag">Brag About It</string>
    <string name="open_camera">Take a shot</string>
    <string name="goal_completed">You have completed the goal \'%s\', you can brag about it by tapping the STAR icon</string>
    <string name="select_option">Select an option</string>
    <string name="from_galerry_select">From Gallery</string>
    <string name="from_camera_select">From Camera</string>
    <string name="shake_for_random">SHAKE!!!</string>
    <string name="remember_me">Remember Me</string>
    <string name="new_brags_notification">There\'re some new brags, check them out ;)</string>
    <string name="hello">Hello %s</string>
    <string name="username">Username: %s</string>
    <string name="email">Email: %s</string>

</resources>
