<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.telerikacademy.jasmine.thebucketlistapp.activities.MainActivity" >

    <item android:id="@+id/action_add_goal"
        android:title="@string/btnNewGoal"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/plus" />

    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:icon="@drawable/profile" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:icon="@drawable/logout" />

</menu>
