<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ivIdea"
        android:background="@android:color/transparent"
        android:src="@drawable/idea"
        android:contentDescription="@string/ivProgress"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtIdeaTitle"
            android:id="@+id/tvRowIdeaTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtIdeaAuthor"
            android:id="@+id/tvRowIdeaAuthor"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtCreatedAt"
            android:id="@+id/tvCreatedAt"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

    </LinearLayout>
</LinearLayout>
