<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/etUsername"
                android:hint="@string/etUserNameHint"
                android:layout_below="@+id/ivLogo"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                android:hint="@string/etPasswordHint"
                android:layout_below="@+id/etUsername"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLogin"
                android:background="@color/bbutton_success"
                android:id="@+id/btnLogin"
                android:layout_below="@+id/etPassword"
                android:layout_margin="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="33dp"
                android:textSize="25sp"
                android:clickable="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                android:background="@color/bbutton_primary"
                android:id="@+id/btnRegister"
                android:layout_margin="5dp"
                android:layout_below="@+id/btnLogin"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:clickable="true" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:id="@+id/ivLogo"
                android:src="@drawable/logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/copyright"
                android:id="@+id/tvRowGoalTitle"
                android:layout_alignTop="@+id/btnRegister"
                android:layout_marginTop="120dp"
                android:layout_centerHorizontal="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:id="@+id/cbRememberMe"
                android:layout_below="@+id/btnRegister"
                android:layout_centerHorizontal="true"
                android:checked="false" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
