<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtGreeting"
        android:id="@+id/tvGreeting"
        android:layout_marginTop="43dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/etUserNameHint"
        android:id="@+id/tvUsername"
        android:layout_marginTop="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvGreeting" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/etEMailHint"
        android:id="@+id/tvEmail"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/tvUsername"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_alignStart="@+id/tvUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtProgressInfo"
        android:id="@+id/tvProgressInfo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Progress"
        android:id="@+id/tvProgress"
        android:layout_below="@+id/tvProgressInfo"
        android:layout_alignLeft="@+id/tvGreeting"
        android:layout_alignStart="@+id/tvGreeting"
        android:layout_marginTop="47dp" />


</RelativeLayout>
