<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etGoalTitle"
            android:hint="@string/txtGoalTitleHint"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etGoalDescriptrion"
            android:hint="@string/txtGoalDescriptionHint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:id="@+id/btnSave"
            android:drawableLeft="@drawable/save"
            android:drawableStart="@drawable/save"
            android:text="@string/save"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="23sp"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:id="@+id/btnCancel"
            android:drawableLeft="@drawable/cancel"
            android:drawableStart="@drawable/cancel"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:textSize="23sp"
            android:layout_marginBottom="15dp" />

    </RelativeLayout>

</LinearLayout>