<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewProfile">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:id="@+id/etDisplayName"
                android:hint="@string/etDisplayNameHint"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/etUsernameProfile"
                android:hint="@string/etUserNameHint"
                android:layout_below="@+id/etDisplayName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:id="@+id/etEMailProfile"
                android:hint="@string/etEMailHint"
                android:layout_below="@+id/etUsernameProfile"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSaveProfile"
                android:background="@color/bbutton_success"
                android:id="@+id/btnSaveProfile"
                android:layout_below="@+id/etEMailProfile"
                android:layout_margin="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="33dp"
                android:textSize="25sp"
                android:clickable="true" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
